# InstagramXFilter

./: README.MD  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/poney/xfilter/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gpuimage/: build.gradle
gpuimage/src/main/: AndroidManifest.xml
gpuimage/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
gpuimage/src/main/cpp/render/: EGLRender.cpp  EGLRender.h  MyGLRenderContext.cpp  MyGLRenderContext.h
gpuimage/src/main/cpp/sample/: GLSampleBase.h  GLTransitionExample.cpp  GLTransitionExample.h  GLTransitionExample_2.cpp  GLTransitionExample_2.h  GLTransitionExample_3.cpp  GLTransitionExample_3.h  GLTransitionExample_4.cpp  GLTransitionExample_4.h
gpuimage/src/main/cpp/util/: GLUtils.h  ImageDef.h  LogUtil.h
gpuimage/src/main/java/com/poney/gpuimage/activity/: CameraActivity.kt  GLEffectActivity.java  GalleryActivity.java
gpuimage/src/main/java/com/poney/gpuimage/camera/: Camera1Loader.kt  Camera2Loader.kt  CameraLoader.kt  ImageExt.kt  ViewExt.kt
gpuimage/src/main/java/com/poney/gpuimage/filter/blend/: GPUImageAmaroFilter.java  GPUImageAntiqueFilter.java  GPUImageBlackCatFilter.java  GPUImageBrannanFilter.java  GPUImageBrooklynFilter.java  GPUImageCalmFilter.java  (+34 more)
gpuimage/src/main/java/com/poney/gpuimage/gl/: GLContext.java  GLImage.java
gpuimage/src/main/java/com/poney/gpuimage/glrender/: GPUNativeRender.java
gpuimage/src/main/java/com/poney/gpuimage/utils/: FilterTypeHelper.java  OpenGL30Utils.java  OpenGlUtils.java
gpuimage/src/main/java/com/poney/gpuimage/view/: GPUGLSurfaceView.java  GPUGLSurfaceViewRender.java  GPUImage.java  GPUImageNativeLibrary.java
gpuimage/src/main/res/layout/: activity_camera.xml  activity_gleffect.xml
gpuimage/src/main/res/menu/: menu_main.xml
gpuimage/src/main/res/raw/: gltransition_fragment.glsl  gltransition_vertex.glsl
gpuimage/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
keystore/: instagramxfilter.jks
(+6 files in other folders)
